fix: Skin: add spacing between openfiles richlistitems
(integrated from master branch change b8f16d4 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/openfiles/skin/openfiles.p.less
+++ b/src/modules/openfiles/skin/openfiles.p.less
@@ -1,5 +1,10 @@
 #openfilesListbox
 {
+    richlistitem
+    {
+        margin-bottom: 2px;
+    }
+
     richlistitem.file-item
     {
         label.file-title
@@ -74,7 +79,7 @@
     {
         border-bottom: 1px solid rgba(0,0,0,0.1);
         padding: 0;
-        margin: 0 5px;
+        margin: 0 5px 2px;
 
         &.languageicon
         {
